# llm-zoomcamp-homeworks-practices

./: .gitignore  README.md  llm-zoomcamp.ipynb  persinsent_rag.ipynb  persistent_ingest.ipynb  pyproject.toml  rag_helper.py
module1/: llm-zoomcamp.ipynb  part2.ipynb
module2/: README.md  rag_helper.py  sql_rag.ipynb  vectorsearch_PGvector.ipynb
module2/homework2/: embedder.py  homework2.ipynb  hw2.ipynb  main.py  pyproject.toml
week1/: part2.ipynb
week1/homework1/: homework1.ipynb  rag_helper.py
