[project]
name = "llm-zoomcamp-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "minsearch>=0.0.8",
    "openai>=2.38.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlitesearch>=0.0.5",
    "toyaikit>=0.0.11",
]
