[project]
name = "llm-zoomcamp-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gitsource>=0.0.5",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "minsearch>=0.0.8",
    "numpy>=2.2.6",
    "onnxruntime>=1.24.3",
    "openai>=2.38.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.6.0",
    "sqlitesearch>=0.0.5",
    "tokenizers>=0.22.2",
    "toyaikit>=0.0.11",
    "tqdm>=4.68.3",
]

[dependency-groups]
dev = [
    "huggingface-hub>=1.21.0",
    "jupyter>=1.1.1",
]
